# CodeAssistant

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements-llm.txt  requirements-vector.txt  requirements.txt
configs/: evo_config.yaml
scripts/: demo.sh
src/: components.d.ts  typed-router.d.ts
src/api/: files.ts  http.ts  project.ts
src/components/layouts/: BaseSide.vue
src/components/projects/: ProjectCreateDialog.vue  ProjectDetailHeader.vue  ProjectEditDialog.vue  ProjectFileTreePanel.vue  ProjectFileViewer.vue  ProjectInfoCard.vue  ProjectListHeader.vue  ProjectSearchResultPanel.vue  ProjectSpecEditor.vue  ProjectTable.vue
src/evo_agent/: applier.py  assembler.py  cli.py  compressor.py  connectors.py  indexer.py  mistakes.py  project_registry.py  scanner.py  selector.py  server.py  tokenizer.py  vectorstore.py
src/evo_agent/static/: app.js  style.css
src/evo_agent/templates/: base.html  index.html  project_detail.html
src/pages/: index.vue
src/pages/projects/: detail.vue  intro.vue
src/pages/projects/detail/: [id].vue
src/pages/prompts/: index.vue
